<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.eulerframework</groupId>
        <artifactId>euler-parent</artifactId>
        <version>7-SNAPSHOT</version>
    </parent>

    <artifactId>euler-framework</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <url>https://eulerproject.io/euler-framework</url>
    <description>Parent POM for Euler Framework projects.</description>

    <properties>
        <java.version>25</java.version>
        <revision>2.0.0-SNAPSHOT</revision>
        <main.basedir>${basedir}</main.basedir>
    </properties>

    <modules>
        <module>eulerframework-dependencies</module>
        <module>eulerframework-parent</module>
        <module>euler-core</module>
        <module>euler-web-core</module>
        <module>euler-security-core</module>
        <module>euler-security-web</module>
        <module>euler-security-webauthn</module>
        <module>euler-security-oauth2-core</module>
        <module>euler-security-oauth2-authorization-server</module>
        <module>euler-security-oauth2-resource-server</module>
        <module>euler-security-oauth2-client</module>
        <module>euler-data-file</module>
        <module>euler-data-jpa</module>
        <module>euler-socket</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/euler-projects/euler-framework.git</connection>
        <developerConnection>scm:git:git@github.com:euler-projects/euler-framework.git</developerConnection>
        <url>https://github.com/euler-projects/euler-framework</url>
    </scm>

    <repositories>
        <repository>
            <id>euler-snapshot</id>
            <name>euler-snapshot</name>
            <url>https://repo.eulerproject.io/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
